@@ -1,5 +1,8 @@
 2014-11-27  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/64067
+	* gcc.c-torture/compile/pr64067.c: New test.
+
 	PR tree-optimization/64024
 	* gcc.dg/vect/vect-simd-clone-13.c: New test.
 	* gcc.dg/vect/vect-simd-clone-14.c: New test.
