@@ -1,5 +1,11 @@
 2014-11-27  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/64067
+	* expr.c (expand_expr_addr_expr_1) <case COMPOUND_LITERAL_EXPR>:
+	Handle it by returning address of COMPOUND_LITERAL_EXPR_DECL
+	not only if modifier is EXPAND_INITIALIZER, but whenever
+	COMPOUND_LITERAL_EXPR_DECL is non-NULL and TREE_STATIC.
+
 	PR tree-optimization/64024
 	* tree-vectorizer.h (struct _stmt_vec_info): Remove simd_clone_fndecl
 	field.  Add simd_clone_info field.
